Changed the gh-pages for server,recorder and runner details.

--- a/pages/reports.html
+++ b/pages/reports.html
@@ -1,4 +1,3 @@
-<html><head><title>Imaginea/bot-bot @ GitHub</title>
 <meta charset='utf-8'>
 
   <style type="text/css">
@@ -6,7 +5,7 @@
       margin-top: 1.0em;
       background-color: #FFFFFF;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #E6F8E0;
+      color: #000000;
     }
     #container {
       margin: 0 auto;
@@ -20,17 +19,19 @@
     a { color: #5a2f4e; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
+    pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
-</head>
+  </style> 
 
-<frameset rows="20%,80%" >
-<frame src="header.html"  noresize="noresize" name="headerFrame" frameborder="0">
-<frameset cols="15%,85%">
-<frame src="navigator.html"  noresize="noresize" name="navFrame" frameborder="0">
-<frame src="pages/home.html"  noresize="noresize" name="mainFrame" frameborder="0">
-</frameset>
-</frameset>
-</html>
+       
+      <p align="justify"><b>bot-bot</b> currently generates three types of reports for runner execution.</br> You can click on the following links to see the sample reports that are generated:</br>
+<ol>
+<li><a href="../samplereports/TestNG-report/index.html" target="_blank">TestNG default</a> under <i>"test-report/TestNG-report"</i></li>
+<li><a href="../samplereports/junit-noframes.html" target="_blank">Junit</a> under <i>"test-report/Junit"</i></li>
+<li><a href="../samplereports/TestNG-XSLT-report/index.html" target="_blank">TestNG-xslt</a> under <i>"test-report/TestNG-XSLT-report"</i></li>
+</ol>
+</p>
+
+
+
