--- a/pages/tryingtoachieve.html
+++ b/pages/tryingtoachieve.html
@@ -1,4 +1,3 @@
-<html><head><title>Imaginea/bot-bot @ GitHub</title>
 <meta charset='utf-8'>
 
   <style type="text/css">
@@ -6,7 +5,7 @@
       margin-top: 1.0em;
       background-color: #FFFFFF;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #E6F8E0;
+      color: #000000;
     }
     #container {
       margin: 0 auto;
@@ -20,17 +19,22 @@
     a { color: #5a2f4e; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
+    pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
-</head>
+  </style> 
 
-<frameset rows="20%,80%" >
-<frame src="header.html"  noresize="noresize" name="headerFrame" frameborder="0">
-<frameset cols="15%,85%">
-<frame src="navigator.html"  noresize="noresize" name="navFrame" frameborder="0">
-<frame src="pages/home.html"  noresize="noresize" name="mainFrame" frameborder="0">
-</frameset>
-</frameset>
-</html>
+    <h2>Whats bot-bot is trying to achieve</h2>
+
+       
+      
+<pre>
+Currently bot-bot is trying to achieve the status of an open-source automation framework for native android application automation.
+We trying to achieve the following features:
+	1. Recording user interactions from an android native app.
+	2. Support converting the recorded cases to test-files to be used with bot-bot.
+	3. Support for addition/modification of steps by a user for a recorded step and then reverifying them by running it.
+	4. Support for suggestions for identifying elements based on different criterias. 
+</pre>
+
+
