Added keywords page.

--- a/navigator.html
+++ b/navigator.html
@@ -46,8 +46,8 @@
 </ul>
 <li><a target='mainFrame' href='pages/download.html'>Download</a></li>
 <li><a target='mainFrame' href='pages/reports.html'>Reports</a></li>
+<li><a target='mainFrame' href='pages/keywords.html'>Supported keywords</a></li>
 <li><a target='mainFrame' href='pages/stilltocome.html'>Still to come</a></li>
-<li><a target='mainFrame' href='pages/notavailable.html'>Keywords for usage</a></li>
 <li><a target='mainFrame' href='pages/notavailable.html'>Releases</a></li>
 
 </ul>
