modified the installation guidline for server

--- a/pages/installation.html
+++ b/pages/installation.html
@@ -33,7 +33,7 @@
 <p>To build the bot-bot-server war you need to have maven isntalled in your system. Maven can be downloaded from the ths <a href="http://maven.apache.org/download.html">link</a>.</p>
 <p>Once done run the following command at the root of the bot-bot/server folder</p>
 <blockquote>
-<p>$mvn dist
+<p>$mvn clean install
 </p>
 </blockquote>
 
