--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body style="background-image:url(android.jpg);background-position:left;background-size:30%;background-repeat: no-repeat;"><!--style="background-image:url(android.jpg);background-position:left;background-repeat: no-repeat;"-->
-  <a href="https://github.com/Imaginea/bot-bot"><img style="position: absolute; top: 0; right: 0; border: 0;height:90px;width:90px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:90px;width:90px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
     <div class="download">
