--- a/pages/home.html
+++ b/pages/home.html
@@ -42,7 +42,7 @@ It uses following open-source tools:</br></br>
 
 <h2>Video</h2>
       <p>Following you can see a video of running testcases on wordpress application</br>
-<iframe width="640" height="360" src="http://www.youtube.com/embed/1qAJM9yAET4?fs=1" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="480" src="http://www.youtube.com/embed/tjbvEFi0tNc" frameborder="0" allowfullscreen></iframe>
 </p>
 
 <h2>Authors</h2>
