Updating the pages with some new stuff.

--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
 </head>
-<body style="background-image:url(android.jpg);background-position:left;background-size:30%;background-repeat: no-repeat;"><!--style="background-image:url(android.jpg);background-position:left;background-repeat: no-repeat;"-->
+<body style="background-image:url(android.jpg);background-position:left;background-size:28%;background-repeat: no-repeat;"><!--style="background-image:url(android.jpg);background-position:left;background-repeat: no-repeat;"-->
   <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:90px;width:90px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
@@ -39,8 +39,7 @@
         <img border="0" width="70" src="https://github.com/images/modules/download/tar.png"></a>
     </div>
 <h1><a href="https://github.com/Imaginea/bot-bot">bot-bot</a>
-      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Android native app automation tool with
-	record and replay options.</span></h1>
+      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
 
 
 </body></html>
