--- a/pages/home.html
+++ b/pages/home.html
@@ -24,16 +24,16 @@
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style> 
     
-      <p align="justify">This is an android native app automation framework which provides features to record,modify and replay your test cases.
+      <p align="justify">This is a Selenium like android native app automation framework with record and replay features.
 </br>The tool have three different components:</br>
 <ul>
-<li><b>Server</b> -  the server is used to record user actions through <i>Recorder</i>. It also allows the users to export their test-cases so that they can be run with the <i>Runner</i>.</li>
-<li><b>Recorder</b> - Recorder is used to record user actions at the android app side and then send them to the <i>Server</i>.</li>
-<li><b>Runner</b> - This is the main part of bot-bot. The runner allows the user to run their recorded test-cases on the actual android application as a suite. It also generated emailable html reports for your test execution.</li>
+<li><b>Server</b> -  Records user actions through <i>Recorder</i> and allows users to export their test-cases for use with the <i>Runner</i>.</li>
+<li><b>Recorder</b> - Tracks user actions at the android app side and then send them to the <i>Server</i>.</li>
+<li><b>Runner</b> - Allows the user to run their recorded test-cases on the actual android application as a suite. It also generats emailable html reports at the end of test execution.</li>
 </ul>
 </p>
 
-This tool is based on keyword driven approach. For defining a test-case user have to define his cases in "csv" format.
+This tool is based on keyword driven approach. For defining a test-case user have to define test-cases in "csv" format.
 These csv files will be converted to java files and then executed using the TestNG execution framework.
 It uses following open-source tools:</br></br>
 1. Selenium Nativedriver</br>
