Updating the ghpages for the updated changes of v0.7.

--- a/navigator.html
+++ b/navigator.html
@@ -29,6 +29,9 @@
   </style>
 </head>
 <body>
+<div style="position:relative">
+    <img src="android_new.jpg" style="position:left;width:175px;"/>
+</div>
 <a target='mainFrame' href='pages/home.html'>Home</a>
 <ul>
 <li><a target='mainFrame' href='pages/currently.html'>Features</a></li>
