--- a/pages/currently.html
+++ b/pages/currently.html
@@ -9,10 +9,12 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 900px;
     }
     h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
+    h1 .medium{ font-size: 0.9em; color: #5a2f4e; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
+    h1 .smallest { font-size: 0.3em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #5a2f4e; }
     h3 { text-align: center; color: #5a2f4e; }
@@ -22,22 +24,32 @@
     pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style> 
+  </style>
+<a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <div id="container">
+
+    <div class="download">
+      <a href="https://github.com/Imaginea/bot-bot/zipball/master">
+        <img border="0" width="80" src="https://github.com/images/modules/download/zip.png"></a>
+      <a href="https://github.com/Imaginea/bot-bot/tarball/master">
+        <img border="0" width="80" src="https://github.com/images/modules/download/tar.png"></a>
+    </div>
+<h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
+      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
+</div>
     <h2>Currently supported features</h2>
 
 <ul>
 <li>Currently bot-bot supports following features:</li>
 <ul>
+  <li>Record user actions of any apk file without the need of the source code.</li>
+  <li>Functional testing on any android app for which the apk file is available.</li>
 <li>Record user actions on simulator or using an actual phone.</li>
 <li>Store the recorded actions on the server for future refferences.</li>
 <li>Edit/modify recorded cases. </li>
 <li>Allow the recorded cases to be exported in <i>csv</i> format</li>
-<li>Generation of different html reports for test execution.</li>
+<li>Generation of html reports after test execution.</li>
 <li>Support for extension of test api, for adding or enhancing any existing cases.</li>
-<li>Support for execution of a particular test-case of a module using testng configuration.</li>
-<li>Support for UI testing.</li>
-<li>Support for checking particular icon appears on the screen.</li>
-<li>Support for verifying screen.</li>
 </ul>
 </ul>
 
