--- a/pages/keywords.html
+++ b/pages/keywords.html
@@ -9,10 +9,12 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 900px;
     }
     h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
+  h1 .medium{ font-size: 0.9em; color: #5a2f4e; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
+    h1 .smallest { font-size: 0.3em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #5a2f4e; }
     h3 { text-align: center; color: #5a2f4e; }
@@ -40,6 +42,18 @@ var sortedKeywords=keywords.sort();
   
 } 
 </script>
+<a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <div id="container">
+
+    <div class="download">
+      <a href="https://github.com/Imaginea/bot-bot/zipball/master">
+        <img border="0" width="80" src="https://github.com/images/modules/download/zip.png"></a>
+      <a href="https://github.com/Imaginea/bot-bot/tarball/master">
+        <img border="0" width="80" src="https://github.com/images/modules/download/tar.png"></a>
+    </div>
+<h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
+      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
+</div>
 <body onload="KeywordDropdown()">
     <h2>Keywords Supported</h2>
     <a name="head"></a>
