Adding analytics to ghpages

--- a/pages/components.html
+++ b/pages/components.html
@@ -70,6 +70,7 @@ hr {
 	font-style: italic;
 }
 </style>
+<body>
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
@@ -148,3 +149,5 @@ More information on the reports can be found <a href="reports.html">here</a>.</p
 
 
 <hr/>
+<script type="text/javascript" src="../analytics.js"></script>
+</body>
