--- a/pages/currently.html
+++ b/pages/currently.html
@@ -25,6 +25,7 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
+<body>
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
@@ -52,5 +53,6 @@
 <li>Support for extension of test api, for adding or enhancing any existing cases.</li>
 </ul>
 </ul>
-
+<script type="text/javascript" src="../analytics.js"></script>
+</body>
 
