--- a/pages/installation.html
+++ b/pages/installation.html
@@ -26,6 +26,7 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
+<body>
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
@@ -183,3 +184,5 @@ Here the {app package name} needs to be replaced with the name of the package as
 <p>This will compile your code and execute your test cases. Currently TestNG , Junit &amp; TestNG-xslt report are generated for the test execution.</p>
 </li>
 </ol>
+<script type="text/javascript" src="../analytics.js"></script>
+</body>
