--- a/pages/keywords.html
+++ b/pages/keywords.html
@@ -25,6 +25,8 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
+<body>
+<script type="text/javascript" src="../analytics.js"></script>
   <script type="text/javascript">
 var keywords=[];
 keywords=['openapp','checkbuttonpresent','clickbutton','clickmenu','checktextpresent','assertbuttonpresent','asserttextpresent','assertpartialtextpresent','checklocatorpresent','assertlocatorpresent','entertext','clickback','verifyscreen','waitforscreen','assertmenuitem','assertradiobuttonpresent','checkradiobuttonpresent','assertspinnerpresent','clickspinner','clickradiobutton','clickbyid','clicktext','scrollup','scrolldown'];
