--- a/pages/reports.html
+++ b/pages/reports.html
@@ -24,7 +24,8 @@
     pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style> 
+  </style>
+<body>
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
@@ -45,6 +46,6 @@
 <li><a href="../samplereports/TestNG-XSLT-report/index.html" target="_blank">TestNG-xslt</a> under <i>"test-report/TestNG-XSLT-report"</i></li>
 </ol>
 </p>
-
-
+<script type="text/javascript" src="../analytics.js"></script>
+</body>
 
