--- a/pages/home.html
+++ b/pages/home.html
@@ -24,7 +24,9 @@
     pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style> 
+  </style>
+<body>
+
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
 
@@ -91,4 +93,5 @@ Moiz Virani (moiz.v@imaginea.com)
     </div>
 
   </div>
-
+<script type="text/javascript" src="../analytics.js"></script>
+</body>
