Updating the release and download page.

--- a/navigator.html
+++ b/navigator.html
@@ -51,7 +51,7 @@
 <li><a target='mainFrame' href='pages/reports.html'>Reports</a></li>
 <li><a target='mainFrame' href='pages/keywords.html'>Supported keywords</a></li>
 <li><a target='mainFrame' href='pages/stilltocome.html'>Still to come</a></li>
-<li><a target='mainFrame' href='pages/notavailable.html'>Releases</a></li>
+<li><a target='mainFrame' href='pages/releases.html'>Releases</a></li>
 
 </ul>
 </body></html>
