--- a/pages/download.html
+++ b/pages/download.html
@@ -41,8 +41,11 @@
        
       <p align="justify">Please use one of the following methods to download bot-bot:</br>
 <ul>
-<li><a href="https://github.com/Imaginea/bot-bot/zipball/master">Zip</a></li>
-<li><a href="https://github.com/Imaginea/bot-bot/tarball/master">Tar</a></li>
+  <li>Go to the bot-bot download page and download the latest version:</br>
+  <a href="https://github.com/Imaginea/bot-bot/downloads">https://github.com/Imaginea/bot-bot/downloads</a>
+  </li>
+<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/zipball/master">zip</a></li>
+<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/tarball/master">tar</a></li>
 <li>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/Imaginea/bot-bot</pre>
