--- a/pages/releases.html
+++ b/pages/releases.html
@@ -16,7 +16,7 @@
     h1 .smallest { font-size: 0.3em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #5a2f4e; }
-    h3 { text-align: center; color: #5a2f4e; }
+    h3 { text-align: left; color: #5a2f4e; }
     a { color: #5a2f4e; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
@@ -37,8 +37,16 @@
 <h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
       <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
 </div></br> 
-       
-      <p align="justify">This page is currently under construction.</p>
+      <h2>Current release</h2>
+      <h3>V-0.7</h3>
+      <p align="justify">Following features were implemented as part of this release</p>
+      <ul>
+        <li>Support for robotium framework</li>
+        <li>Reduced the configuration required to integrate bot-bot with the test app.</li>
+        <li>Integrate recorder to Android app without the need of the source code.</li>
+        <li>Export as CSV option for downloading the test-case as csv file.</li>
+        <li>clickbyid support for Robotium framework</li>
+      </ul>
 
 </body>
 
