--- a/pages/stilltocome.html
+++ b/pages/stilltocome.html
@@ -47,6 +47,8 @@
 <li>Multiple file format support for export of test-cases</li>
 <li>Manage multiple recording at the same time.</li>
 <li>Use server as a test-case repository.</li>
+<li>Support for record and replay for applications with WebViews.</li>
+<li>Support for Data-driven testing</li>
 </ul>
 </ul>
 <script type="text/javascript" src="../analytics.js"></script>
